update post message

--- a/.github/workflows/merge.yml
+++ b/.github/workflows/merge.yml
@@ -15,4 +15,4 @@ jobs:
         run: echo "Sending deployment start order..."
       - name: Webhook post
         run: |
-          curl --header "Content-Type: application/json" --request POST --data '{"username":"xyz","password":"xyz"}' https://discord.com/api/webhooks/1238679291806613565/JmFafJrl98lF7HCgejqTympaBerDw4d8izyHMVHLrw62sJIinClCvdfjGcEYm2rVrSWX
+          curl --header "Content-Type: application/json" --request POST --data '{"content":"Sent from GitHub Actions"}' https://discord.com/api/webhooks/1238679291806613565/JmFafJrl98lF7HCgejqTympaBerDw4d8izyHMVHLrw62sJIinClCvdfjGcEYm2rVrSWX
