--- a/.github/workflows/merge.yml
+++ b/.github/workflows/merge.yml
@@ -15,7 +15,7 @@ jobs:
         uses: tsickert/discord-webhook@v5.3.0
         with:
           webhook-url: ${{ secrets.DISCORD_WEBHOOK_URL }}
-          content: "Unit Test: PASS"
+          content: "[${{ github.repository }}] Unit Test: PASS "
   start-deploy:
     runs-on: ubuntu-latest
     steps:
@@ -23,4 +23,4 @@ jobs:
         uses: tsickert/discord-webhook@v5.3.0
         with:
           webhook-url: ${{ secrets.DISCORD_WEBHOOK_URL }}
-          content: "Sent from GitHub Actions using secrets"
+          content: "[${{ github.repository }}] Sent from GitHub Actions using secrets"
