--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ubuntu-lastest
     steps:
         - name: Cancel any previous workflow still running
-          uses: styfle/cancel-workflow-action
+          uses: styfle/cancel-workflow-action@0.9.1
 
   test:
     runs-on: ubuntu-latest
