--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,14 +1,9 @@
 name: Action on push to any branch
-run-name: Run test to last commited changes
+run-name: Run test to last commited changes on ${{ github.base_ref }} branch
 
 on: push
 
 jobs:
-  cancel:
-    runs-on: ubuntu-lastest
-    steps:
-      - name: Cancel any previous workflow still running
-        uses: styfle/cancel-workflow-action@0.9.1
 
   test:
     runs-on: ubuntu-latest
