update for run test just in any branches excepts main or master

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,7 +1,11 @@
 name: Action on push to any branch
 run-name: Run test to last commited changes on ${{ github.base_ref }} branch
 
-on: push
+on:
+  push:
+    branches:
+      - '!master'
+      - '!main'
 
 jobs:
 
