--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,12 +9,6 @@ on:
 
 jobs:
 
-  cancel:
-    runs-on: ubuntu-lastest
-    steps:
-        - name: Cancel any previous workflow still running
-          uses: styfle/cancel-workflow-action@0.9.1
-
   test:
     runs-on: ubuntu-latest
     steps:
@@ -26,7 +20,6 @@ jobs:
 
   deploy:
     needs: 
-      - cancel
       - test
     runs-on: ubuntu-latest
     steps:
@@ -34,4 +27,4 @@ jobs:
         uses: tsickert/discord-webhook@v5.3.0
         with:
           webhook-url: ${{secrets.DISCORD_WEBHOOK_URL}}
-          content: "A new DEPLOY TO PRODUCTION request has been sent to server from ${{ github.repository }}"
+          content: "A new DEPLOY TO PRODUCTION request has been sent to server from **${{ github.repository }}** repository"
