--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,4 +37,4 @@ jobs:
         uses: tsickert/discord-webhook@v5.3.0
         with:
           webhook-url: ${{secrets.DISCORD_WEBHOOK_URL}}
-          content: "A new **deploy-to-production** request has been sent to server from **${{ github.repository }}** repository"
+          content: "[ **${{ github.repository }}** ] a new **deploy-to-production** request has been sent to server ⚠️"
