--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,5 +1,5 @@
-name: Action on push to any branch
-run-name: Run test to last commited changes on ${{ github.base_ref }} branch
+name: Test before merge
+run-name: Run unit and end-to-end tests before allow to merge to main branch
 
 on:
   pull_request:
@@ -14,8 +14,23 @@ jobs:
   test:
     runs-on: ubuntu-latest
     steps:
+      - name: Some step for testing
+        id: dummytest
+        run: echo Hello world!
       - name: Run unit test
         uses: tsickert/discord-webhook@v5.3.0
         with:
           webhook-url: ${{ secrets.DISCORD_WEBHOOK_URL }}
-          content: "Unit test in ${{ github.repository }} has been finished with result: ${{ github.action_status }}"
+          content: "[ **${{ github.repository }}** ] unit tests finished with result: ${{ steps.dummytest.outcome }}"
+
+  e2e:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Some step for testing
+        id: dummytest2
+        run: echo Hello world!
+      - name: Run unit test
+        uses: tsickert/discord-webhook@v5.3.0
+        with:
+          webhook-url: ${{ secrets.DISCORD_WEBHOOK_URL }}
+          content: "[ **${{ github.repository }}** ] end-to-end tests finished with result: ${{ steps.dummytest2.outcome }}"
